--- a/OtherHTML/GoW_Ragnarök/Sass/GoW_Ragnarök.scss
+++ b/OtherHTML/GoW_Ragnarök/Sass/GoW_Ragnarök.scss
@@ -1,43 +1,3 @@
-@font-face{
-    font-family: 'GodOfWar';
-    src: url('../../../fonts/GODOFWAR.ttf');
-}
-
-@mixin apStyle {
-    @media only screen and (max-width: 769px) {
-        font-size: 50%;
-    }
-
-    @media only screen and (min-width: 768px) {
-        font-size: 70%;
-    }
-
-    padding: 0;
-    margin: 0;
-    display: table-cell;
-    vertical-align: middle;
-    color: whitesmoke;
-    text-indent: 0px;
-}
-
-@mixin aStyle {
-    text-decoration: none;
-    display: table;
-    border: 1px solid rgb(38, 40, 156);
-    cursor: pointer;
-    text-indent: 0px;
-    text-align: center;
-    background-color: rgb(106, 148, 204);
-    width: 100%;
-    height: 100%;
-}
-
-body,
-html {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     @media only screen and (min-width: 768px) {
         background: url("../../../Images/1209131.jpg") no-repeat center center fixed;
@@ -48,83 +8,33 @@ body {
         -webkit-background-size: cover;
         background-size: cover;
     }
+
     @media only screen and (max-width: 769px) {
         background: url("../../../Images/9781506733494-1658716557072.jpg") no-repeat center center fixed;
-        background-size: 110% 100%;
+        background-size: 110% 110%;
     }
-    font-family: 'Times New Roman', Times, serif;
+
+    font-family: 'Times New Roman',
+    Times,
+    serif;
     color: whitesmoke;
     max-width: 100%;
     min-height: 100%;
     font-size: 18px;
 }
 
-p {
-    text-indent: 20px;
-    padding: 0;
-}
-
-h3 {
-    font-family: GodOfWar;
-
-    @media only screen and (min-width: 768px) {
-        width: 90%;
-        font-size: 200%;
-        margin: 10px auto 2% auto;
-    }
-}
-
-.navMenu {
-    font-family: GodOfWar;
-    padding: 0;
-    margin: 0;
-    top: 0;
-    box-sizing: content-box;
-    left: 0;
-    position: relative;
-    display: flex;
-    z-index: 1000;
-    width: 100%;
-    height: 45px;
-    position: fixed;
-
-    @media only screen and (min-width: 768px) {
-        justify-content: right;
-    }
-}
-
 .nav {
-    display: inline-flex;
-    justify-content: right;
-    height: 45px;
-    position: fixed;
-
-    @media only screen and (max-width: 769px) {
-        width: 100%;
-        padding-top: 70px;
-    }
-
-    @media only screen and (min-width: 768px) {
-        width: 66%;
-    }
-
     >a {
-        @include aStyle();
+        border: 1px solid rgb(38, 40, 156);
+        background-color: rgb(106, 148, 204);
+
         &:hover {
             background: rgb(38, 40, 156);
-        }
-        >p {
-            @include apStyle();
         }
     }
 }
 
 #showToggleMenu {
-    width: 20%;
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-
     &:hover {
         width: 100%;
 
@@ -137,223 +47,23 @@ h3 {
     }
 
     >a {
-        @include aStyle();
+
+        border: 1px solid rgb(38, 40, 156);
+        background-color: rgb(106, 148, 204);
+
         &:hover {
             background: rgb(38, 40, 156);
-        }
-        >p {
-            @include apStyle();
         }
     }
 }
 
 .toggleList {
-    display: inline-block;
-    width: 100%;
-    list-style: none;
-    background-color: black;
-    opacity: 90%;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    height: 0;
-    overflow: hidden;
-    transition: height 1s;
-
     >li {
         width: 100%;
         border-top: 1px solid rgb(38, 40, 156);
+
         &:hover {
             background: rgb(38, 40, 156);
-    
-        }
-
-        >a {
-            width: 100%;
-            height: 100%;
-            text-decoration: none;
-            color: whitesmoke;
-        }
-    }
-}
-
-.toggleMenu {
-    display: inline-flex;
-    padding: 0px;
-    margin: 0;
-    width: 100%;
-    transition: height 1s;
-}
-
-
-.logo {
-    position: relative;
-    z-index: 1;
-
-    @media only screen and (min-width: 768px) {
-        left: 0px;
-        top: 0;
-        padding-top: 0;
-        margin: 0 auto 0 0;
-    }
-
-    @media only screen and (max-width: 769px) {
-        display: block;
-        background-color: #000000;
-        width: 100%;
-        text-align: center;
-        height: 70px;
-    }
-
-    >img {
-        @media only screen and (min-width: 768px) {
-            height: 45px;
-        }
-    }
-}
-
-.Axe {
-    display: flex;
-    position: fixed;
-    z-index: 0;
-    width: 100px;
-    left: 68px;
-    top: -250px;
-    transform: rotateX(180deg) rotate(-14deg);
-}
-
-.BladesOfChaos {
-    @media only screen and (min-width: 768px) {
-        top: -8px;
-        width: 10%;
-    }
-
-    @media only screen and (max-width: 769px) {
-        top: 75px;
-        width: 20%;
-    }
-
-    position: absolute;
-    right: 0;
-    z-index: 0;
-    transform: scale(1);
-}
-
-.mainContent {
-    background-color: rgba($color: #000000, $alpha: 0.9);
-    color: whitesmoke;
-    position: relative;
-    top: 750px;
-    left: 5%;
-    right: 5%;
-    width: 90%;
-
-    >div {
-        margin: auto;
-        padding: 1% 0 1% 0;
-        width: 95%;
-        height: 120%;
-    }
-}
-
-.mainContent>div {
-    margin: auto;
-    padding: 1% 0 1% 0;
-    width: 95%;
-    height: 120%;
-}
-
-.Characters_Weapons {
-    >div {
-        display: flex;
-        padding: 5px 0;
-
-        >div {
-            width: 100%;
-
-            >img {
-                @media only screen and (min-width: 768px) {
-                    float: left;
-                    width: 10%;
-                }
-
-                @media only screen and (max-width: 900px) {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 80%
-                }
-
-                padding: 1% 0 0 0;
-                opacity: 110%;
-            }
-
-            >p,
-            >ul,
-            >h3 {
-                @media only screen and (min-width: 768px) {
-                    padding-left: 15%;
-                }
-
-                @media only screen and (max-width: 900px) {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-
-            }
-        }
-    }
-}
-
-.Enemies {
-    display: inline-block;
-    padding-left: 3%;
-    width: 100%;
-    height: 100%;
-
-    figure {
-        width: 15%;
-        float: left;
-        padding-right: auto;
-
-        p {
-            text-indent: 0;
-            text-align: center;
-        }
-
-        img {
-            display: block;
-            width: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            transform: scale(1);
-        }
-    }
-}
-
-.Bosses {
-    display: inline-block;
-    padding-left: 3%;
-    width: 100%;
-    height: 100%;
-
-    figure {
-        width: 15%;
-        float: left;
-        padding-right: auto;
-
-        p {
-            text-indent: 0;
-            text-align: center;
-        }
-
-        img {
-            display: block;
-            width: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            transform: scale(1);
         }
     }
 }
